--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,35 @@
+nav ul {
+  display: flex;
+  /* background-color: red; */
+  justify-content: space-around;
+  width: 80vw;
+  list-style-type: none;
+  padding: 0;
+  font-size: 2rem;
+}
+
 nav {
   display: flex;
-  list-style-type: none;
-
-  justify-content: space-between;
-  width: 80vw;
-  background-color: red;
+  justify-content: center;
 }
+
+a:hover {
+  color: pink;
+  background: black;
+  padding: 0.5rem;
+  border-radius: 0.2rem;
+}
+a {
+  text-decoration-line: none;
+  color: #000;
+}
+
+/* Anden måde at løse et med pipe lines på */
+/* li {
+  border-right: 1px solid #000;
+  padding: 0 3rem;
+}
+
+li:last-child {
+  border-right: 0;
+} */
